diesel_compile_tests/tests/fail/as_changeset_bad_column_name_syntax.stderr
error: `column_name` is either unexpected or has bad format
  --> $DIR/as_changeset_bad_column_name_syntax.rs:14:14
   |
14 |     #[diesel(column_name)]
   |              ^^^^^^^^^^^
